<resources>
    <string name="app_name">PatientCare</string>

    <string name="action_settings">Settings</string>
    <string name="descLogo">Application logo</string>
    <string name="hintemail">Email</string>
    <string name="logout">Logout</string>
    <string name="hintfirst">First Name</string>
    <string name="hintlast">Last Name</string>
    <string name="hintPassword">Password</string>
    <string name="btnLogin">Sign In</string>
    <string name="btnForgotPassword">Forgot Password?</string>
    <string name="title_activity_symptoms">Menu</string>

    <string name="pain_level">Pain Level</string>
    <string name="fatigue_level">Fatigue Level</string>
    <string name="numbness_level">Numbness Level</string>
    <string name="spasticity_level">Spasticity Level</string>
    <string name="vision_problems_level">Vision Problems Level</string>
    <string name="dizziness_level">Dizziness Level</string>
    <string name="bladder_problems_level">Bladder Problems Level</string>
    <string name="cognitive_changes_level">Cognitive Changes Level</string>
    <string name="emotional_changes_level">Emotional Changes Level</string>

    <string name="welcome_to_paitentcare">Welcome to PatientCare!</string>
    <string name="my_health_summary">My Health Summary</string>
    <string name="submit_symptom_form">Submit Symptom Form</string>
    <string name="request_emergency_assistance">Request Emergency Assistance</string>

    <string name="patient_list">Patient List</string>
    <string name="symptoms_list">Past Symptom Entries</string>

    <string name="enter_patient_credentials">Enter Patient Credentials</string>
    <string name="register">Register</string>

    <string name="hello_world">Hello world!</string>
    <string name="Next">Next</string>
    <string name="Done">Done</string>
    
    <string-array name="user_types">
        <item>Patient</item>
        <item>Doctor</item>
        <item>Admin</item>
    </string-array>
    <string name="title_activity_register_patient">Register New User</string>
    <string name="title_activity_patient_list">Patient List</string>
    <string name="title_activity_symptoms_list">Past Symptom Entries</string>
    <string name="title_activity_symptoms_summary">Placeholder</string>

    <string name="dequeue_patient">Dequeue Patient</string>
    <string name="emergency">Emergency</string>
    <string name="pain">Pain</string>
    <string name="fatigue">Fatigue</string>
    <string name="numbness">Numbness</string>
    <string name="spasticity">Spasticity</string>
    <string name="vision">Vision</string>
    <string name="dizziness">Dizziness</string>
    <string name="bladder">Bladder</string>
    <string name="cognitive">Cognitive</string>
    <string name="emotional">Emotional</string>
    <string name="comments_for_patient">Comments for Patient</string>
    <string name="submit">Submit</string>

    <string name="doctors_comment">Doctor\'s Comment:</string>
</resources>
