<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ff5ea3ff">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff5ea3ff"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dequeue_patient"
        android:id="@+id/dequeueButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/emergency"
        android:id="@+id/emergency"
        android:layout_below="@+id/dequeueButton"
        android:layout_marginTop="13dp"
        android:layout_centerHorizontal="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pain"
        android:id="@+id/pain"
        android:layout_below="@+id/emergency"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fatigue"
        android:id="@+id/fatigue"
        android:layout_below="@+id/pain"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/numbness"
        android:id="@+id/numbness"
        android:layout_below="@+id/fatigue"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/spasticity"
        android:id="@+id/spasticity"
        android:layout_below="@+id/numbness"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/vision"
        android:id="@+id/vision"
        android:layout_below="@+id/spasticity"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="dizziness"
        android:id="@+id/dizziness"
        android:layout_below="@+id/vision"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bladder"
        android:id="@+id/bladder"
        android:layout_below="@+id/dizziness"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cognitive"
        android:id="@+id/cognitive"
        android:layout_below="@+id/bladder"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="emotional"
        android:id="@+id/emotional"
        android:layout_below="@+id/cognitive"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false"
        android:textSize="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/commentBox"
        android:layout_below="@+id/emotional"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#ffffffff"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="0dp"
        android:paddingBottom="10dp"
        android:hint="@string/comments_for_patient" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submitButton"
        android:layout_below="@+id/commentBox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

</RelativeLayout>
</ScrollView>