<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff5ea3ff"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/enter_patient_credentials"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:textSize="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/regFirstName"
        android:layout_marginTop="40dp"
        android:background="#ffffffff"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="0dp"
        android:paddingBottom="10dp"
        android:hint="@string/hintfirst"
        android:layout_below="@+id/textView2"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/regLastName"
        android:layout_marginTop="10dp"
        android:background="#ffffffff"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="0dp"
        android:paddingBottom="10dp"
        android:hint="@string/hintlast"
        android:layout_below="@+id/regFirstName"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/regEmail"
        android:layout_marginTop="10dp"
        android:background="#ffffffff"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="0dp"
        android:paddingBottom="10dp"
        android:hint="@string/hintemail"
        android:layout_below="@+id/regLastName"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="false"
        android:layout_alignWithParentIfMissing="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/regPassword"
        android:layout_below="@+id/regEmail"
        android:layout_marginTop="10dp"
        android:background="#ffffffff"
        android:hint="@string/hintPassword"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="0dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/regSpinner"
        android:layout_below="@+id/regPassword"
        android:layout_marginTop="20dp"
        android:background="#ffffffff"
        android:paddingLeft="15dp"
        android:paddingTop="10dp"
        android:paddingRight="0dp"
        android:paddingBottom="10dp"
        android:entries="@array/user_types" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/regButton"
        android:layout_below="@+id/regSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />
</RelativeLayout>